# weather-api

./: README.md  locations.csv  pyproject.toml  weather-api.postman_collection.json
tests/: test_app.py
weather_api/: app.py
